WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240383
-Wreturn-type warning in PathOperation.cpp
https://bugs.webkit.org/show_bug.cgi?id=240383
Summary
-Wreturn-type warning in PathOperation.cpp
Michael Catanzaro
Reported
2022-05-13 07:34:18 PDT
[18/225] Building CXX object Source/WebCore/CMakeFiles/Web...ivedSources/unified-sources/UnifiedSource-043dd90b-5.cpp.o In file included from /home/mcatanzaro/Projects/WebKit/WebKitBuild/GNOME-gtk3/WebCore/DerivedSources/unified-sources/UnifiedSource-043dd90b-5.cpp:6: /home/mcatanzaro/Projects/WebKit/Source/WebCore/rendering/PathOperation.cpp: In member function ‘double WebCore::RayPathOperation::lengthForPath() const’: /home/mcatanzaro/Projects/WebKit/Source/WebCore/rendering/PathOperation.cpp:70:1: warning: control reaches end of non-void function [-Wreturn-type] 70 | } | ^
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2022-05-13 07:50:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/610
EWS
Comment 2
2022-05-13 10:21:55 PDT
Committed
r294162
(
250531@main
): <
https://commits.webkit.org/250531@main
> Reviewed commits have been landed. Closing PR #610 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-05-13 10:22:13 PDT
<
rdar://problem/93253474
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug