-Wreturn-type warning in PathOperation.cpp https://bugs.webkit.org/show_bug.cgi?id=240383

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2022-05-13
Reviewed by Chris Dumez.

* Source/WebCore/rendering/PathOperation.cpp:
(WebCore::RayPathOperation::lengthForPath const):

Canonical link: https://commits.webkit.org/250531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294162 268f45cc-cd09-0410-ab3c-d52691b4dbfc